# termitype

./: .gitignore  LICENSE  README.md  `  pyproject.toml  requirements.txt  setup.py
data/: runs.json  settings.json  settings_descriptions.json
docs/: ARCHITECTURE.md  file_structure.md
src/adapters/: base.py
src/termitype/: __init__.py  __main__.py
src/termitype/adapters/: linux.py  windows.py
src/termitype/app/: app.py  context.py
src/termitype/cli/: bootstrap.py  shutdown.py
src/termitype/models/: color.py  inputevent.py  settings.py  theme.py
src/termitype/models/presentation/: highlight.py  presentation.py
src/termitype/screens/: base.py  settings.py  typingrun.py
src/termitype/static/: settings.json
src/termitype/storage/: paths.py  storagemanager.py  storagemanagerold.py
src/termitype/utils/: color.py
src/views/: base.py  dummy.py
termitype/: __main__.py
termitype/adapters/: base.py  dummy.py  macos.py
termitype/app/: app.py  config.py  context.py
termitype/cli/: bootstrap.py  entrypoint.py  shutdown.py
termitype/core/: engine.py
termitype/models/: settings.py
termitype/models/engine/: run.py  runreport.py
termitype/models/presentation/: cursor.py  presentation.py
termitype/screens/: base.py  dashboard.py  menu.py  sandbox.py  settings.py  typingrun.py
termitype/storage/: base.py  paths.py  settings.py  storagemanager.py
termitype/utils/: color.py  topbar.py  visuals.py  words.py
termitype/views/: base.py  dummy.py  menu.py  run.py  settings.py
